// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Like /> Rendering Should match snapshot - checked 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 9.057971014492754,
      }
    }
  >
    <View
      style={
        Object {
          "top": -3.6231884057971016,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3587EA",
            "fontFamily": "mykross",
            "fontSize": 12,
            "marginLeft": 0,
            "marginRight": 9.057971014492754,
          }
        }
      >
        L
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 9.057971014492754,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`<Like /> Rendering Should match snapshot - unchecked 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 9.057971014492754,
      }
    }
  >
    <View
      style={
        Object {
          "top": -3.6231884057971016,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3587EA",
            "fontFamily": "mykross",
            "fontSize": 12,
            "marginLeft": 0,
            "marginRight": 9.057971014492754,
          }
        }
      >
        l
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 9.057971014492754,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`<Like /> Rendering Should match snapshot - with custom size - unchecked 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="like-btn"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 9.057971014492754,
      }
    }
  >
    <View
      style={
        Object {
          "top": -3.6231884057971016,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#3587EA",
            "fontFamily": "mykross",
            "fontSize": 22,
            "marginLeft": 0,
            "marginRight": 9.057971014492754,
          }
        }
      >
        l
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#313131",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 23,
          "marginLeft": 9.057971014492754,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;
